--- a/app/src/main/res/layout/item_app_favorite.xml
+++ b/app/src/main/res/layout/item_app_favorite.xml
@@ -17,21 +17,21 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <ImageView
+        <!-- <ImageView
             android:id="@+id/appIcon"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginBottom="8dp"
             android:contentDescription="Ícone do aplicativo"
-            tools:src="@android:drawable/sym_def_app_icon" />
+            tools:src="@android:drawable/sym_def_app_icon" /> -->
 
         <TextView
             android:id="@+id/appName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
             android:ellipsize="end"
             android:gravity="center"
-            android:maxLines="2"
+            android:singleLine="true"
             android:textAppearance="@style/TextAppearance.ZenLauncher.Caption"
             tools:text="Nome do App" />
 
