--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     
     <!-- Cores de fundo -->
     <color name="background">#FF121212</color>
+    <color name="background_dark">#FF000000</color>
     <color name="surface">#FF1E1E1E</color>
     <color name="card">#FF242424</color>
     
