--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,7 +70,8 @@
     
     <style name="TextAppearance.ZenLauncher.Button" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/accent</item>
+        <item name="android:textColor">@color/accent_light</item>
+        <item name="android:background">@color/background_button</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textAllCaps">false</item>
     </style>
